footer fixed and screen overlapping resolved

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -43,7 +43,7 @@ body {
 footer {
     padding: 10px 0;
     width: 100%;
-    position: absolute; 
+    position: fixed; 
     bottom: 0;
     overflow: hidden; 
 }
